--- a/ecclesia/lectio/mateo/mateo10.html
+++ b/ecclesia/lectio/mateo/mateo10.html
@@ -42,10 +42,10 @@
         <li class="li"><a href="#1">Misión de los Doce Mat 10,1-15</a></li>
         <li class="li"><a href="#2">Predicción de persecuciones. Mat 10,16-25</a></li>
         <li class="li"><a href="#3">Hablar francamente y sin temor. Mat 10,26-33</a></li>
-        <li class="li"><a href="#4">Jesús, señal de contradicción. Mat 10,34-36</a></li>
+        <li class="li"><a href="#4">Jesús, señal de contradicción. Mat 10,34-36 ***</a> 50</li>
         <li class="li"><a href="#5">Renunciarse para seguir a Jesús. Mat 10,37-39</a></li>
         <li class="li"><a href="#6">Conclusión del discurso apostólico. Mat 10,40-41</a></li>
-        <li class="li"><a href="#7"></a></li>
+     
       </ol>
     </div>
   </section>
