--- a/ecclesia/lectio/mateo/mateo13.html
+++ b/ecclesia/lectio/mateo/mateo13.html
@@ -21,7 +21,7 @@
     <br />
     <br />
     <!-- ****************************************************************** -->
-    <h1 class="init"></h1>
+    <h1 class="init">MATEO 13</h1>
     <h3 class="cita">
       "No aceptes como Verdad lo que no proviene del Amor,
       <br />
@@ -37,19 +37,24 @@
       <h1>TEMAS</h1>
       <div>
         <ol>
-          <li class="li"><a href="#1"></a></li>
-          <li class="li"><a href="#2"></a></li>
-          <li class="li"><a href="#3"></a></li>
-          <li class="li"><a href="#4"></a></li>
-          <li class="li"><a href="#5"></a></li>
-          <li class="li"><a href="#6"></a></li>
-          <li class="li"><a href="#7"></a></li>
+          <li class="li"><a href="#1">Introducción Mt 13,1-3</a></li>
+          <li class="li"><a href="#2">La parábola del sembrador Mt 13,4-9</a></li>
+          <li class="li"><a href="#3">El propósito de las parábolas Mt 13,10-17</a></li>
+          <li class="li"><a href="#4">La parábola del sembrador explicada Mt 13,18-21</a></li>
+          <li class="li"><a href="#5">La parábola de la cizaña Mt 13,22-30 +++ </a> 20</li>
+          <li class="li"><a href="#6">El grano de mostaza Mt 13,31-32</a></li>
+          <li class="li"><a href="#7">La parábola de la levadura Mt 13,33</a></li>
+          <li class="li"><a href="#8">Profecía y parábolas Mt 34-35</a></li>
+          <li class="li"><a href="#9">La parábola de la cizaña explicada Mt 36-43</a></li>
+          <li class="li"><a href="#10">La parábola del tesoro escondido y la perla Mt 13,44-46 +++ </a> 25</li>
+          <li class="li"><a href="#11">La parábola de la red y Conclusión Mt 13,47-52  </a></li>
+        
         </ol>
       </div>
     </section>
     <!-- ****************************************************************** -->
     <section id="1">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Introducción Mt 13,1-3</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -110,7 +115,7 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="2">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">La parábola del sembrador Mt 13,4-9</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -173,7 +178,7 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="3">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">El propósito de las parábolas Mt 13,10-17</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -235,7 +240,7 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="4">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">La parábola del sembrador explicada Mt 13,18-21</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -297,7 +302,7 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="5">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">La parábola de la cizaña Mt 13,22-30</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -359,7 +364,8 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="6">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">El grano de mostaza Mt 13,31-32
+</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -421,7 +427,272 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="7">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">La parábola de la levadura Mt 13,33
+</h2>
+      <!-- /////////////////////////////////////// -->
+      <ol>
+        <li>
+          <details class="select">
+            <summary>El Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Variaciones en el Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Paralelos</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Temas</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Patrística</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Magisterio</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Metanoia</summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p>
+              <br />
+              <br />
+            </p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+      </ol>
+      <!-- ////////////////////////////////// -->
+    </section>
+    <!-- ****************************************************************** -->
+    <section id="8">
+      <h2 class="subtitulo">Profecía y parábolas Mt 34-35</h2>
+      <!-- /////////////////////////////////////// -->
+      <ol>
+        <li>
+          <details class="select">
+            <summary>El Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Variaciones en el Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Paralelos</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Temas</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Patrística</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Magisterio</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Metanoia</summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p>
+              <br />
+              <br />
+            </p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+      </ol>
+      <!-- ////////////////////////////////// -->
+    </section>
+    <!-- ****************************************************************** -->
+    <section id="9">
+      <h2 class="subtitulo">La parábola de la cizaña explicada Mt 36-43</h2>
+      <!-- /////////////////////////////////////// -->
+      <ol>
+        <li>
+          <details class="select">
+            <summary>El Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Variaciones en el Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Paralelos</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Temas</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Patrística</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Magisterio</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Metanoia</summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p>
+              <br />
+              <br />
+            </p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+      </ol>
+      <!-- ////////////////////////////////// -->
+    </section>
+    <!-- ****************************************************************** -->
+    <section id="10">
+      <h2 class="subtitulo">La parábola del tesoro escondido y la perla Mt 13,44-46</h2>
+      <!-- /////////////////////////////////////// -->
+      <ol>
+        <li>
+          <details class="select">
+            <summary>El Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Variaciones en el Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Paralelos</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Temas</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Patrística</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Magisterio</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Metanoia</summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p>
+              <br />
+              <br />
+            </p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+      </ol>
+      <!-- ////////////////////////////////// -->
+    </section>
+    <!-- ****************************************************************** -->
+    <section id="11">
+      <h2 class="subtitulo">La parábola de la red y Conclusión Mt 13,47-52  </h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
