--- a/ecclesia/lectio/mateo/mateo14.html
+++ b/ecclesia/lectio/mateo/mateo14.html
@@ -21,7 +21,7 @@
     <br />
     <br />
     <!-- ****************************************************************** -->
-    <h1 class="init"></h1>
+    <h1 class="init">MATEO 14</h1>
     <h3 class="cita">
       "No aceptes como Verdad lo que no proviene del Amor,
       <br />
@@ -37,19 +37,18 @@
       <h1>TEMAS</h1>
       <div>
         <ol>
-          <li class="li"><a href="#1"></a></li>
-          <li class="li"><a href="#2"></a></li>
-          <li class="li"><a href="#3"></a></li>
-          <li class="li"><a href="#4"></a></li>
-          <li class="li"><a href="#5"></a></li>
-          <li class="li"><a href="#6"></a></li>
-          <li class="li"><a href="#7"></a></li>
+          <li class="li"><a href="#1">Herodes y Jesús  Mt 14,1-2</a></li>
+          <li class="li"><a href="#2">La muerte de Juan el Bautista Mt 14,3-12</a></li>
+          <li class="li"><a href="#3">Primera multiplicación de los panes Mt 14,13-21</a></li>
+          <li class="li"><a href="#4">Jesús camina sobre el agua Mt 14,22-33 +++ </a> 30</li>
+          <li class="li"><a href="#5"></a>Jesús sana a los enfermos en Genesaret Mt 14,34/36</li>
+   
         </ol>
       </div>
     </section>
     <!-- ****************************************************************** -->
     <section id="1">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Herodes y Jesús  Mt 14,1-2</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -110,7 +109,7 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="2">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">La muerte de Juan el Bautista Mt 14,3-12</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -173,7 +172,7 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="3">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Primera multiplicación de los panes Mt 14,13-21</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -235,7 +234,7 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="4">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Jesús camina sobre el agua Mt 14,22-33</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -297,7 +296,7 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="5">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Jesús sana a los enfermos en Genesaret Mt 14,34-36</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
