--- a/ecclesia/lectio/mateo/mateo16.html
+++ b/ecclesia/lectio/mateo/mateo16.html
@@ -21,7 +21,7 @@
     <br />
     <br />
     <!-- ****************************************************************** -->
-    <h1 class="init"></h1>
+    <h1 class="init">MATEO 16</h1>
     <h3 class="cita">
       "No aceptes como Verdad lo que no proviene del Amor,
       <br />
@@ -37,19 +37,17 @@
       <h1>TEMAS</h1>
       <div>
         <ol>
-          <li class="li"><a href="#1"></a></li>
-          <li class="li"><a href="#2"></a></li>
-          <li class="li"><a href="#3"></a></li>
-          <li class="li"><a href="#4"></a></li>
-          <li class="li"><a href="#5"></a></li>
-          <li class="li"><a href="#6"></a></li>
-          <li class="li"><a href="#7"></a></li>
+          <li class="li"><a href="#1">Los fariseos y saduceos piden señales Mt 16,1-4</a></li>
+          <li class="li"><a href="#2">La levadura de los fariseos y de los saduceos Mt 16,5-12</a></li>
+          <li class="li"><a href="#3">Profesión de fe y primado de Pedro Mt 16,13-20</a></li>
+          <li class="li"><a href="#4">Primer anuncio de la Pasión Mt 16,21-23</a></li>
+          <li class="li"><a href="#5">Condiciones para seguir a Jesús Mt 16,24-28</a></li>
         </ol>
       </div>
     </section>
     <!-- ****************************************************************** -->
     <section id="1">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Los fariseos y saduceos piden señales Mt 16,1-4</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -110,7 +108,7 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="2">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">La levadura de los fariseos y de los saduceos Mt 16,5-12</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -173,7 +171,7 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="3">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Profesión de fe y primado de Pedro Mt 16,13-20</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -235,7 +233,7 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="4">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Primer anuncio de la Pasión Mt 16,21-23</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -297,7 +295,7 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="5">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Condiciones para seguir a Jesús Mt 16,24-28</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -351,134 +349,6 @@
         <li>
           <details class="select">
             <summary></summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-      </ol>
-      <!-- ////////////////////////////////// -->
-    </section>
-    <!-- ****************************************************************** -->
-    <section id="6">
-      <h2 class="subtitulo"></h2>
-      <!-- /////////////////////////////////////// -->
-      <ol>
-        <li>
-          <details class="select">
-            <summary>El Texto</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Variaciones en el Texto</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Paralelos</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Temas</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Patrística</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Magisterio</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Metanoia</summary>
-            <ol>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ol>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary></summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-      </ol>
-      <!-- ////////////////////////////////// -->
-    </section>
-    <!-- ****************************************************************** -->
-    <section id="7">
-      <h2 class="subtitulo"></h2>
-      <!-- /////////////////////////////////////// -->
-      <ol>
-        <li>
-          <details class="select">
-            <summary>El Texto</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Variaciones en el Texto</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Paralelos</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Temas</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Patrística</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Magisterio</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Metanoia</summary>
-            <ol>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ol>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary></summary>
-            <p>
-              <br />
-              <br />
-            </p>
           </details>
         </li>
         <!-- ****************************** -->
