--- a/ecclesia/lectio/mateo/mateo15.html
+++ b/ecclesia/lectio/mateo/mateo15.html
@@ -21,7 +21,7 @@
     <br />
     <br />
     <!-- ****************************************************************** -->
-    <h1 class="init"></h1>
+    <h1 class="init">MATEO 15</h1>
     <h3 class="cita">
       "No aceptes como Verdad lo que no proviene del Amor,
       <br />
@@ -37,19 +37,17 @@
       <h1>TEMAS</h1>
       <div>
         <ol>
-          <li class="li"><a href="#1"></a></li>
-          <li class="li"><a href="#2"></a></li>
-          <li class="li"><a href="#3"></a></li>
-          <li class="li"><a href="#4"></a></li>
-          <li class="li"><a href="#5"></a></li>
-          <li class="li"><a href="#6"></a></li>
-          <li class="li"><a href="#7"></a></li>
+          <li class="li"><a href="#1">Tradiciones y mandamientos Mt 15,1-9</a></li>
+          <li class="li"><a href="#2">Lo que contamina al hombre Mt 15,10-20</a></li>
+          <li class="li"><a href="#3">La fe de una mujer cananea Mt 15,21-28</a></li>
+          <li class="li"><a href="#4">Jesús sana a muchos enfermos Mt 15,29-31 +++ </a> 35</li>
+          <li class="li"><a href="#5">Segunda multiplicación de los panes Mt 15,32/39</a></li>
         </ol>
       </div>
     </section>
     <!-- ****************************************************************** -->
     <section id="1">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Tradiciones y mandamientos Mt 15,1-9</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -110,7 +108,7 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="2">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Lo que contamina al hombre Mt 15,10-20</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -173,7 +171,7 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="3">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">La fe de una mujer cananea Mt 15,21-28</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -235,7 +233,7 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="4">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Jesús sana a muchos enfermos Mt 15,29-31</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -297,7 +295,7 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="5">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Segunda multiplicación de los panes Mt 15,32-39</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -358,133 +356,6 @@
       <!-- ////////////////////////////////// -->
     </section>
     <!-- ****************************************************************** -->
-    <section id="6">
-      <h2 class="subtitulo"></h2>
-      <!-- /////////////////////////////////////// -->
-      <ol>
-        <li>
-          <details class="select">
-            <summary>El Texto</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Variaciones en el Texto</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Paralelos</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Temas</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Patrística</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Magisterio</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Metanoia</summary>
-            <ol>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ol>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary></summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-      </ol>
-      <!-- ////////////////////////////////// -->
-    </section>
-    <!-- ****************************************************************** -->
-    <section id="7">
-      <h2 class="subtitulo"></h2>
-      <!-- /////////////////////////////////////// -->
-      <ol>
-        <li>
-          <details class="select">
-            <summary>El Texto</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Variaciones en el Texto</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Paralelos</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Temas</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Patrística</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Magisterio</summary>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Metanoia</summary>
-            <ol>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ol>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary></summary>
-            <p>
-              <br />
-              <br />
-            </p>
-          </details>
-        </li>
-        <!-- ****************************** -->
-      </ol>
-      <!-- ////////////////////////////////// -->
-    </section>
-    <!-- ****************************************************************** -->
+
   </body>
 </html>
